--- a/weatherProject/src/App.css
+++ b/weatherProject/src/App.css
@@ -39,6 +39,7 @@ body .container .main {
   width: 100%;
   height: calc(100vh - 60px);
   display: flex;
+  justify-content: space-between;
 }
 body .container .main .firstSection {
   width: 15%;
@@ -174,7 +175,7 @@ body .container .main .firstSection .perceived .thermometerIconbox {
 }
 body .container .main .firstSection .perceived .thermometerIconbox .thermometerIcon {
   width: 5vw;
-  height: 10vh;
+  height: 5vw;
   background-image: url(./assets/img/ThermometerQuarter.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -203,7 +204,7 @@ body .container .main .firstSection .perceived .suggestion .suggestionM {
   font-size: 0.7vw;
 }
 body .container .main .secondSection {
-  width: 40%;
+  width: 35%;
   height: 44vw;
   display: flex;
   flex-wrap: wrap;
@@ -222,9 +223,11 @@ body .container .main .secondSection .b1 {
 }
 body .container .main .secondSection .b1 .mapSelect {
   position: absolute;
+  top: 1vw;
   text-align: center;
   width: 84px;
   height: 20px;
+  right: 1vw;
   border-radius: 30px;
 }
 body .container .main .secondSection .b1 .map {
@@ -301,19 +304,22 @@ body .container .main .thirdSection .c1 {
   box-sizing: border-box;
   position: relative;
 }
-body .container .main .thirdSection .c1 p {
+body .container .main .thirdSection .c1 .tgtitle {
   font-size: 1vw;
   position: absolute;
-  top: 1.2vw;
+  top: 0.9vw;
+  left: 17.3vw;
+  font-weight: bold;
 }
 body .container .main .thirdSection .c1 .temperatureGraph {
   position: absolute;
-  top: 2vw;
+  top: 2.5vw;
   left: 0;
   border-radius: 20px;
   margin: auto;
   display: block;
-  width: 35vw;
+  width: 90%;
+  height: 12vw;
 }
 body .container .main .thirdSection .c2 {
   width: 100%;
@@ -323,57 +329,301 @@ body .container .main .thirdSection .c2 {
 }
 
 @media (max-width: 720px) {
-  .container {
-    margin: 0 auto;
-    height: 100vh;
-    width: 90vw;
-  }
-  .container .header {
-    width: 100%;
-    height: 60px;
+  body {
     background-color: #fff;
+  }
+  body .container {
+    background-color: #3b2b2b;
+  }
+  body .container .header p {
+    font-size: 4vw;
+    text-align: center;
+    margin: 0;
+    border-radius: 20px;
+  }
+  body .container .main {
+    display: block;
+  }
+  body .container .main .firstSection {
+    width: 100%;
+    height: 44vw;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+    box-sizing: border-box;
+  }
+  body .container .main .firstSection .selectTime {
+    width: 30%;
+    height: 100px;
+    margin: 0 auto;
+    border-radius: 20px;
+    background-color: #303136;
+    border-radius: 20px;
+    background-color: #fff;
+  }
+  body .container .main .firstSection .selectTime .selectValuebox {
+    width: 50px;
+    display: flex;
     text-align: center;
   }
-  .container .main {
+  body .container .main .firstSection .selectTime .selectValuebox .selectValue {
+    width: 200px;
+  }
+  body .container .main .firstSection .realtimeWeatherArea {
+    width: 30%;
+    height: 100px;
+    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 20px;
+    background: linear-gradient(#bdc5cc, #0185f8);
+    padding: 20px;
+    box-sizing: border-box;
+  }
+  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather {
+    height: 100%;
+    font-size: 1.4vw;
+  }
+  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather h2 {
+    font-family: "Nanum Gothic", serif;
+    font-weight: 600;
+    color: white;
+    text-align: center;
+  }
+  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul {
+    width: 10vw;
+    height: 100%;
+    margin: auto;
+    list-style: none;
+    margin-top: 2vh;
+  }
+  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .icon {
+    width: 8vw;
+    height: 40%;
+    margin: 0 auto;
+    background-image: url(./assets/img/sunny.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .temperature {
+    text-align: center;
+    font-size: 2.2vw;
+    font-weight: bold;
+    text-shadow: 7px 7px 20px #1C1B20;
+    margin-top: -2vw;
+  }
+  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info {
+    margin-top: 2vw;
     width: 100%;
-    height: calc(100% - 60px);
+    height: 5.5vh;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+  }
+  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB {
+    margin: auto;
+  }
+  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB p {
+    font-size: 0.7vw;
+  }
+  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .windIcon {
+    width: 4vh;
+    height: 2vw;
+    display: block;
+    margin: auto;
+    background-image: url(./assets/img/Wind.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .humidityIcon {
+    width: 4vh;
+    height: 2vw;
+    display: block;
+    margin: auto;
+    background-image: url(./assets/img/Dew.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .VisibilityIcon {
+    width: 4vh;
+    height: 2vw;
+    display: block;
+    margin: auto;
+    background-image: url(./assets/img/Rain2.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  body .container .main .firstSection .perceived {
+    width: 30%;
+    height: 100px;
+    margin: 0 auto;
+    border-radius: 20px;
+    background-color: #fff;
+    background: linear-gradient(#bdc5cc, #0185f8);
+    background: linear-gradient(#ccc8bd, #ffab04, #ff8604);
+    box-sizing: border-box;
+    padding: 2vw;
+  }
+  body .container .main .firstSection .perceived .thermometerIconbox {
+    display: flex;
+    width: 100%;
+    height: 12vh;
+  }
+  body .container .main .firstSection .perceived .thermometerIconbox .thermometerIcon {
+    width: 5vw;
+    height: 5vw;
+    background-image: url(./assets/img/ThermometerQuarter.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  body .container .main .firstSection .perceived .thermometerIconbox div {
+    text-align: center;
+    font-size: 1vw;
+    font-weight: bold;
+  }
+  body .container .main .firstSection .perceived .thermometerIconbox div p {
+    margin-top: 1vw;
+    font-size: 1.1vw;
+    font-weight: bold;
+  }
+  body .container .main .firstSection .perceived .suggestion {
+    text-align: center;
+  }
+  body .container .main .firstSection .perceived .suggestion .suggestionT {
+    font-size: 1vw;
+    font-weight: bold;
+    margin-top: -0.5vh;
+    margin-bottom: 1vh;
+  }
+  body .container .main .firstSection .perceived .suggestion .suggestionM {
+    font-size: 0.7vw;
+  }
+  body .container .main .secondSection {
+    width: 100%;
+    height: 100vw;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
   }
-  .container .main .firstSection {
-    width: 100% !important;
-    height: 300px !important;
-  }
-  .container .main .firstSection .a1 {
-    width: 100% !important;
-    height: 50px !important;
-    background-color: #fff;
+  body .container .main .secondSection .b1 {
+    width: 90%;
+    height: 63%;
+    margin: 0 auto;
+    background-color: #303136;
     border-radius: 20px;
+    background-color: #1C1B20;
+    overflow: hidden;
+    position: relative;
+    opacity: 90%;
+  }
+  body .container .main .secondSection .b1 .mapSelect {
+    position: absolute;
+    top: 50vw;
+    text-align: center;
+    width: 84px;
+    height: 20px;
+    right: 6vw;
+    border-radius: 30px;
+  }
+  body .container .main .secondSection .b1 .map {
+    width: 300px;
+    height: 250px;
+  }
+  body .container .main .secondSection .b1 .map .koreaMap {
+    stroke: rgb(159, 255, 171);
+    fill: #ffffff;
+  }
+  body .container .main .secondSection .b1 .map .koreaMap:hover {
+    fill: #06ab7c;
+    cursor: pointer;
+  }
+  body .container .main .secondSection .b2 {
+    width: 90%;
+    margin: 0 auto;
+    background-color: #303136;
+    border-radius: 20px;
+    height: 30%;
+  }
+  body .container .main .thirdSection {
+    width: 100%;
+    height: 44vw;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  body .container .main .thirdSection .c {
+    width: 100%;
+    height: 13vw;
+    display: flex;
+    justify-content: space-between;
+  }
+  body .container .main .thirdSection .c .c2-1 {
+    width: 32%;
+    background-color: black;
     background-color: #303136;
     border-radius: 20px;
   }
-  .container .main .firstSection .a {
-    width: 46% !important;
-    height: 200px !important;
-    background-color: #fff;
-    border-radius: 20px;
+  body .container .main .thirdSection .c .c2-1 .circleBox {
+    width: 100%;
+    position: relative;
+  }
+  body .container .main .thirdSection .c .c2-1 .circleBox .circle {
+    display: block;
+    width: 12vw;
+    height: 12vw;
+    margin: auto;
+  }
+  body .container .main .thirdSection .c .c2-1 .circleBox .circleperTitle {
+    position: absolute;
+    top: 1vw;
+    left: 4vw;
+    font-size: 1vw;
+    font-weight: bold;
+    font-family: "Nanum Gothic", serif;
+  }
+  body .container .main .thirdSection .c .c2-1 .circleBox .circleper {
+    position: absolute;
+    top: 6vw;
+    left: 4.3vw;
+    font-size: 2vw;
+    font-weight: bold;
+    text-shadow: 10px 10px 10px #1C1B20;
+    font-family: "Nanum Gothic", serif;
+  }
+  body .container .main .thirdSection .c1 {
+    width: 100%;
+    height: 30%;
     background-color: #303136;
     border-radius: 20px;
+    padding: 30px;
+    box-sizing: border-box;
+    position: relative;
   }
-  .container .main .secondSection {
-    width: 100% !important;
-    height: 500px !important;
+  body .container .main .thirdSection .c1 .tgtitle {
+    font-size: 1vw;
+    position: absolute;
+    top: 0.9vw;
+    left: 17.3vw;
+    font-weight: bold;
   }
-  .container .main .secondSection .b1 {
-    width: 100vw !important;
+  body .container .main .thirdSection .c1 .temperatureGraph {
+    position: absolute;
+    top: 2.5vw;
+    left: 0;
+    border-radius: 20px;
+    margin: auto;
+    display: block;
+    width: 90%;
+    height: 12vw;
   }
-  .container .main .secondSection .b2 {
-    width: 100vw !important;
-  }
-  .container .main .thirdSection {
-    width: 100% !important;
-  }
-  .container .main .thirdSection .c {
-    height: 150px !important;
+  body .container .main .thirdSection .c2 {
+    width: 100%;
+    height: 30%;
+    background-color: #303136;
+    border-radius: 20px;
   }
 }/*# sourceMappingURL=App.css.map */
