--- a/weatherProject/src/App.css
+++ b/weatherProject/src/App.css
@@ -5,6 +5,39 @@
   font-weight: 100;
 }
 
+.tg {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.tg td {
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  overflow: hidden;
+  padding: 10px 5px;
+  word-break: normal;
+}
+
+.tg th {
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  overflow: hidden;
+  padding: 10px 5px;
+  word-break: normal;
+}
+
+.tg .tg-0lax {
+  text-align: left;
+  vertical-align: top;
+}
+
 body {
   margin: 0 auto;
   width: 99vw;
@@ -60,17 +93,27 @@ body .container .main .firstSection .selectTime {
   padding: 20px;
 }
 body .container .main .firstSection .selectTime .selectValuebox {
-  width: 5vw;
-  display: flex;
+  width: 10vw;
   text-align: center;
   margin: auto;
 }
-body .container .main .firstSection .selectTime .selectValuebox .selectValue {
-  text-align: right;
-  width: 5vw;
+body .container .main .firstSection .selectTime .selectValuebox .yearBox {
+  display: flex;
+}
+body .container .main .firstSection .selectTime .selectValuebox .yearBox .selectValue {
+  text-align: center;
+  width: 100%;
+  height: 1.2vw;
+  border-radius: 30px;
+  margin-bottom: 1vw;
+}
+body .container .main .firstSection .selectTime .selectValuebox .mapBox .mapSelect {
+  text-align: center;
+  width: 10vw;
+  height: 1.2vw;
   border-radius: 30px;
 }
-body .container .main .firstSection .realtimeWeatherArea {
+body .container .main .realtimeWeatherArea {
   width: 100%;
   height: 20.5vw;
   margin: 0 auto;
@@ -80,55 +123,61 @@ body .container .main .firstSection .realtimeWeatherArea {
   padding: 20px;
   box-sizing: border-box;
 }
-body .container .main .firstSection .realtimeWeatherArea .realtimeWeather {
+body .container .main .realtimeWeatherArea .realtimeWeather {
   height: 100%;
   font-size: 1.4vw;
 }
-body .container .main .firstSection .realtimeWeatherArea .realtimeWeather h2 {
+body .container .main .realtimeWeatherArea .realtimeWeather h2 {
   font-family: "Nanum Gothic", serif;
   font-weight: 600;
   color: white;
   text-align: center;
 }
-body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul {
+body .container .main .realtimeWeatherArea .realtimeWeather h2 p {
+  font-size: 0.9vw;
+}
+body .container .main .realtimeWeatherArea .realtimeWeather ul {
   width: 10vw;
   height: 100%;
   margin: auto;
   list-style: none;
   margin-top: 2vh;
 }
-body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .icon {
+body .container .main .realtimeWeatherArea .realtimeWeather ul .icon {
   width: 8vw;
   height: 40%;
-  margin: 0 auto;
+  margin: -1vw auto;
   background-image: url(./assets/img/sunny.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .temperature {
+body .container .main .realtimeWeatherArea .realtimeWeather ul .temperature {
   text-align: center;
   font-size: 2.2vw;
   font-weight: bold;
   text-shadow: 7px 7px 20px #1C1B20;
   margin-top: -2vw;
 }
-body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info {
-  margin-top: 2vw;
-  width: 100%;
-  height: 5.5vh;
+body .container .main .realtimeWeatherArea .realtimeWeather ul .weather-info {
+  margin-top: 1vw;
+  width: 10vw;
+  height: 5.5vw;
   display: flex;
+  gap: 1.2vw;
   justify-content: space-between;
   text-align: center;
 }
-body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB {
+body .container .main .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB {
   margin: auto;
 }
-body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB p {
-  font-size: 0.7vw;
+body .container .main .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB p {
+  margin-top: 0.5vw;
+  font-size: 0.6vw;
+  text-align: center;
 }
-body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .windIcon {
-  width: 4vh;
+body .container .main .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .windIcon {
+  width: 2vw;
   height: 2vw;
   display: block;
   margin: auto;
@@ -137,8 +186,8 @@ body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .we
   background-repeat: no-repeat;
   background-size: cover;
 }
-body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .humidityIcon {
-  width: 4vh;
+body .container .main .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .humidityIcon {
+  width: 2vw;
   height: 2vw;
   display: block;
   margin: auto;
@@ -147,8 +196,8 @@ body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .we
   background-repeat: no-repeat;
   background-size: cover;
 }
-body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .VisibilityIcon {
-  width: 4vh;
+body .container .main .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .VisibilityIcon {
+  width: 2vw;
   height: 2vw;
   display: block;
   margin: auto;
@@ -157,7 +206,7 @@ body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .we
   background-repeat: no-repeat;
   background-size: cover;
 }
-body .container .main .firstSection .perceived {
+body .container .main .perceived {
   width: 100%;
   height: 30%;
   margin: 0 auto;
@@ -168,12 +217,12 @@ body .container .main .firstSection .perceived {
   box-sizing: border-box;
   padding: 2vw;
 }
-body .container .main .firstSection .perceived .thermometerIconbox {
+body .container .main .perceived .thermometerIconbox {
   display: flex;
   width: 100%;
-  height: 12vh;
+  height: 6.5vw;
 }
-body .container .main .firstSection .perceived .thermometerIconbox .thermometerIcon {
+body .container .main .perceived .thermometerIconbox .thermometerIcon {
   width: 5vw;
   height: 5vw;
   background-image: url(./assets/img/ThermometerQuarter.png);
@@ -181,36 +230,36 @@ body .container .main .firstSection .perceived .thermometerIconbox .thermometerI
   background-repeat: no-repeat;
   background-size: cover;
 }
-body .container .main .firstSection .perceived .thermometerIconbox div {
+body .container .main .perceived .thermometerIconbox div {
   text-align: center;
   font-size: 1vw;
   font-weight: bold;
 }
-body .container .main .firstSection .perceived .thermometerIconbox div p {
+body .container .main .perceived .thermometerIconbox div p {
   margin-top: 1vw;
   font-size: 1.1vw;
   font-weight: bold;
 }
-body .container .main .firstSection .perceived .suggestion {
+body .container .main .perceived .suggestion {
   text-align: center;
 }
-body .container .main .firstSection .perceived .suggestion .suggestionT {
+body .container .main .perceived .suggestion .suggestionT {
   font-size: 1vw;
   font-weight: bold;
   margin-top: -0.5vh;
   margin-bottom: 1vh;
 }
-body .container .main .firstSection .perceived .suggestion .suggestionM {
+body .container .main .perceived .suggestion .suggestionM {
   font-size: 0.7vw;
 }
-body .container .main .secondSection {
+body .container .secondSection {
   width: 35%;
   height: 44vw;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
-body .container .main .secondSection .b1 {
+body .container .secondSection .b1 {
   width: 90%;
   height: 63%;
   margin: 0 auto;
@@ -221,64 +270,55 @@ body .container .main .secondSection .b1 {
   position: relative;
   opacity: 90%;
 }
-body .container .main .secondSection .b1 .mapSelect {
-  position: absolute;
-  top: 1vw;
-  text-align: center;
-  width: 84px;
-  height: 20px;
-  right: 1vw;
-  border-radius: 30px;
-}
-body .container .main .secondSection .b1 .map {
+body .container .secondSection .b1 .map {
   width: 25vw;
   height: 100%;
 }
-body .container .main .secondSection .b1 .map .koreaMap {
+body .container .secondSection .b1 .map .koreaMap {
   stroke: rgb(159, 255, 171);
   fill: #ffffff;
 }
-body .container .main .secondSection .b1 .map .koreaMap:hover {
+body .container .secondSection .b1 .map .koreaMap:hover {
   fill: #06ab7c;
   cursor: pointer;
 }
-body .container .main .secondSection .b2 {
+body .container .secondSection .b2 {
   width: 90%;
   margin: 0 auto;
   background-color: #303136;
   border-radius: 20px;
   height: 30%;
 }
-body .container .main .thirdSection {
+body .container .thirdSection {
   width: 45%;
   height: 44vw;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
-body .container .main .thirdSection .c {
+body .container .thirdSection .c {
   width: 100%;
   height: 13vw;
   display: flex;
   justify-content: space-between;
 }
-body .container .main .thirdSection .c .c2-1 {
+body .container .thirdSection .c .c2-1 {
   width: 32%;
   background-color: black;
   background-color: #303136;
   border-radius: 20px;
 }
-body .container .main .thirdSection .c .c2-1 .circleBox {
+body .container .thirdSection .c .c2-1 .circleBox {
   width: 100%;
   position: relative;
 }
-body .container .main .thirdSection .c .c2-1 .circleBox .circle {
+body .container .thirdSection .c .c2-1 .circleBox .circle {
   display: block;
   width: 12vw;
   height: 12vw;
   margin: auto;
 }
-body .container .main .thirdSection .c .c2-1 .circleBox .circleperTitle {
+body .container .thirdSection .c .c2-1 .circleBox .circleperTitle {
   position: absolute;
   top: 1vw;
   left: 4vw;
@@ -286,7 +326,7 @@ body .container .main .thirdSection .c .c2-1 .circleBox .circleperTitle {
   font-weight: bold;
   font-family: "Nanum Gothic", serif;
 }
-body .container .main .thirdSection .c .c2-1 .circleBox .circleper {
+body .container .thirdSection .c .c2-1 .circleBox .circleper {
   position: absolute;
   top: 6vw;
   left: 4.3vw;
@@ -295,7 +335,7 @@ body .container .main .thirdSection .c .c2-1 .circleBox .circleper {
   text-shadow: 10px 10px 10px #1C1B20;
   font-family: "Nanum Gothic", serif;
 }
-body .container .main .thirdSection .c1 {
+body .container .thirdSection .c1 {
   width: 100%;
   height: 30%;
   background-color: #303136;
@@ -304,14 +344,14 @@ body .container .main .thirdSection .c1 {
   box-sizing: border-box;
   position: relative;
 }
-body .container .main .thirdSection .c1 .tgtitle {
+body .container .thirdSection .c1 .tgtitle {
   font-size: 1vw;
   position: absolute;
   top: 0.9vw;
   left: 17.3vw;
   font-weight: bold;
 }
-body .container .main .thirdSection .c1 .temperatureGraph {
+body .container .thirdSection .c1 .temperatureGraph {
   position: absolute;
   top: 2.5vw;
   left: 0;
@@ -321,19 +361,50 @@ body .container .main .thirdSection .c1 .temperatureGraph {
   width: 90%;
   height: 12vw;
 }
-body .container .main .thirdSection .c2 {
+body .container .thirdSection .c2 {
   width: 100%;
   height: 30%;
   background-color: #303136;
   border-radius: 20px;
+  padding: 10px 0 20px 0;
+  font-size: 0.8vw;
+  text-align: center;
+  box-sizing: border-box;
+  font-weight: bold;
+}
+body .container .thirdSection .c2 .table::-webkit-scrollbar {
+  width: 80%;
+}
+body .container .thirdSection .c2 h2 {
+  font-size: 1vw;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+body .container .thirdSection .c2 .table {
+  width: 90%;
+  height: 80%;
+  padding: 0.5vw;
+  margin: auto;
+  border: 1px solid #fff;
+  border-radius: 20px;
+  overflow-y: scroll;
+  overflow-x: scroll;
+}
+body .container .thirdSection .c2 .table .tableMain .customthead .customtr .customth {
+  border-bottom: 1px solid #bdc5cc;
+}
+body .container .thirdSection .c2 .table .tableMain .customtbody .customtr {
+  border-bottom: 2px solid #0185f8;
+}
+body .container .thirdSection .c2 .table .tableMain .customtbody .customtr .customtd {
+  width: 200px;
+  word-break: break-all;
+  border-bottom: 2px solid #646363;
 }
 
-@media (max-width: 720px) {
-  body {
-    background-color: #fff;
-  }
+@media (max-width: 520px) {
   body .container {
-    background-color: #3b2b2b;
+    height: 100%;
   }
   body .container .header p {
     font-size: 4vw;
@@ -349,31 +420,44 @@ body .container .main .thirdSection .c2 {
     height: 44vw;
     display: flex;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 !important;
     box-sizing: border-box;
   }
   body .container .main .firstSection .selectTime {
-    width: 30%;
-    height: 100px;
+    width: 100%;
     margin: 0 auto;
     border-radius: 20px;
     background-color: #303136;
     border-radius: 20px;
-    background-color: #fff;
+    margin-bottom: 10px;
   }
   body .container .main .firstSection .selectTime .selectValuebox {
-    width: 50px;
-    display: flex;
+    width: 60%;
+    height: 30px;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
+    margin-top: -10px;
   }
-  body .container .main .firstSection .selectTime .selectValuebox .selectValue {
-    width: 200px;
+  body .container .main .firstSection .selectTime .selectValuebox .yearBox {
+    display: flex;
+  }
+  body .container .main .firstSection .selectTime .selectValuebox .yearBox .selectValue {
+    text-align: center;
+    width: 100%;
+    height: 20px;
+    border-radius: 30px;
+  }
+  body .container .main .firstSection .selectTime .selectValuebox .mapBox .mapSelect {
+    text-align: center;
+    width: 100%;
+    height: 20px;
+    border-radius: 30px;
   }
   body .container .main .firstSection .realtimeWeatherArea {
-    width: 30%;
-    height: 100px;
+    width: 47%;
+    height: 250px;
     margin: 0 auto;
-    background-color: #fff;
     border-radius: 20px;
     background: linear-gradient(#bdc5cc, #0185f8);
     padding: 20px;
@@ -381,7 +465,7 @@ body .container .main .thirdSection .c2 {
   }
   body .container .main .firstSection .realtimeWeatherArea .realtimeWeather {
     height: 100%;
-    font-size: 1.4vw;
+    font-size: 4vw;
   }
   body .container .main .firstSection .realtimeWeatherArea .realtimeWeather h2 {
     font-family: "Nanum Gothic", serif;
@@ -397,9 +481,10 @@ body .container .main .thirdSection .c2 {
     margin-top: 2vh;
   }
   body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .icon {
-    width: 8vw;
-    height: 40%;
+    width: 20vw;
+    height: 10vh;
     margin: 0 auto;
+    margin-left: -4vw;
     background-image: url(./assets/img/sunny.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -407,18 +492,15 @@ body .container .main .thirdSection .c2 {
   }
   body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .temperature {
     text-align: center;
-    font-size: 2.2vw;
+    font-size: 8vw;
     font-weight: bold;
     text-shadow: 7px 7px 20px #1C1B20;
-    margin-top: -2vw;
+    margin-top: -10vw;
+    margin-left: -3vw;
   }
   body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info {
-    margin-top: 2vw;
-    width: 100%;
-    height: 5.5vh;
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
+    width: 300%;
+    margin-left: -9.6vw;
   }
   body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB {
     margin: auto;
@@ -427,8 +509,8 @@ body .container .main .thirdSection .c2 {
     font-size: 0.7vw;
   }
   body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .windIcon {
-    width: 4vh;
-    height: 2vw;
+    width: 3vh;
+    height: 6vw;
     display: block;
     margin: auto;
     background-image: url(./assets/img/Wind.png);
@@ -437,8 +519,8 @@ body .container .main .thirdSection .c2 {
     background-size: cover;
   }
   body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .humidityIcon {
-    width: 4vh;
-    height: 2vw;
+    width: 3vh;
+    height: 6vw;
     display: block;
     margin: auto;
     background-image: url(./assets/img/Dew.png);
@@ -447,8 +529,8 @@ body .container .main .thirdSection .c2 {
     background-size: cover;
   }
   body .container .main .firstSection .realtimeWeatherArea .realtimeWeather ul .weather-info .winfoB .VisibilityIcon {
-    width: 4vh;
-    height: 2vw;
+    width: 3vh;
+    height: 6vw;
     display: block;
     margin: auto;
     background-image: url(./assets/img/Rain2.png);
@@ -457,24 +539,24 @@ body .container .main .thirdSection .c2 {
     background-size: cover;
   }
   body .container .main .firstSection .perceived {
-    width: 30%;
-    height: 100px;
+    width: 47%;
+    height: 250px;
     margin: 0 auto;
     border-radius: 20px;
-    background-color: #fff;
-    background: linear-gradient(#bdc5cc, #0185f8);
     background: linear-gradient(#ccc8bd, #ffab04, #ff8604);
     box-sizing: border-box;
     padding: 2vw;
   }
   body .container .main .firstSection .perceived .thermometerIconbox {
-    display: flex;
     width: 100%;
-    height: 12vh;
+    height: 150px;
+    position: relative;
   }
   body .container .main .firstSection .perceived .thermometerIconbox .thermometerIcon {
-    width: 5vw;
-    height: 5vw;
+    margin-top: 14vw;
+    margin-left: 1vw;
+    width: 17vw;
+    height: 10vh;
     background-image: url(./assets/img/ThermometerQuarter.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -482,25 +564,31 @@ body .container .main .thirdSection .c2 {
   }
   body .container .main .firstSection .perceived .thermometerIconbox div {
     text-align: center;
-    font-size: 1vw;
+    font-family: "Nanum Gothic", serif;
+    font-weight: 600;
+    color: white;
+    font-size: 5vw;
     font-weight: bold;
+    position: absolute;
+    top: 3vw;
+    left: 9vw;
   }
   body .container .main .firstSection .perceived .thermometerIconbox div p {
     margin-top: 1vw;
-    font-size: 1.1vw;
+    font-size: 4vw;
     font-weight: bold;
   }
   body .container .main .firstSection .perceived .suggestion {
     text-align: center;
   }
   body .container .main .firstSection .perceived .suggestion .suggestionT {
-    font-size: 1vw;
+    font-size: 4vw;
     font-weight: bold;
-    margin-top: -0.5vh;
+    margin-top: 2vh;
     margin-bottom: 1vh;
   }
   body .container .main .firstSection .perceived .suggestion .suggestionM {
-    font-size: 0.7vw;
+    font-size: 2.5vw;
   }
   body .container .main .secondSection {
     width: 100%;
@@ -508,9 +596,10 @@ body .container .main .thirdSection .c2 {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    padding: 0;
   }
   body .container .main .secondSection .b1 {
-    width: 90%;
+    width: 100%;
     height: 63%;
     margin: 0 auto;
     background-color: #303136;
@@ -519,15 +608,6 @@ body .container .main .thirdSection .c2 {
     overflow: hidden;
     position: relative;
     opacity: 90%;
-  }
-  body .container .main .secondSection .b1 .mapSelect {
-    position: absolute;
-    top: 50vw;
-    text-align: center;
-    width: 84px;
-    height: 20px;
-    right: 6vw;
-    border-radius: 30px;
   }
   body .container .main .secondSection .b1 .map {
     width: 300px;
@@ -542,13 +622,14 @@ body .container .main .thirdSection .c2 {
     cursor: pointer;
   }
   body .container .main .secondSection .b2 {
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     background-color: #303136;
     border-radius: 20px;
     height: 30%;
   }
   body .container .main .thirdSection {
+    margin-top: 120px;
     width: 100%;
     height: 44vw;
     display: flex;
