--- a/weatherProject/src/App.css
+++ b/weatherProject/src/App.css
@@ -268,6 +268,7 @@ body .container .secondSection .b1 {
   background-color: #1C1B20;
   overflow: hidden;
   position: relative;
+  background: linear-gradient(#bdc5cc, #0185f8);
   opacity: 90%;
 }
 body .container .secondSection .b1 .map {
@@ -289,6 +290,21 @@ body .container .secondSection .b2 {
   border-radius: 20px;
   height: 30%;
 }
+body .container .secondSection .b2 .chartInfo {
+  width: 100%;
+  max-width: 28vw;
+  justify-content: space-between;
+  margin-left: 0.5vw;
+}
+body .container .secondSection .b2 .chartInfo .text-center {
+  margin-top: -0.6vw;
+  width: 2vw;
+  height: 2vw;
+}
+body .container .secondSection .b2 .chartInfo .text-center .text-sm {
+  font-size: 0.8vw;
+  text-align: center;
+}
 body .container .thirdSection {
   width: 45%;
   height: 44vw;
@@ -301,6 +317,14 @@ body .container .thirdSection .c {
   height: 13vw;
   display: flex;
   justify-content: space-between;
+  position: relative;
+}
+body .container .thirdSection .c .recharts-responsive-container {
+  position: absolute;
+  width: 7% !important;
+  top: 3.7vw;
+  left: 5vw;
+  margin: auto;
 }
 body .container .thirdSection .c .c2-1 {
   width: 32%;
@@ -308,23 +332,23 @@ body .container .thirdSection .c .c2-1 {
   background-color: #303136;
   border-radius: 20px;
 }
+body .container .thirdSection .c .c2-1 .circleperTitle {
+  margin-top: 1vw;
+  text-align: center;
+  font-size: 1.2vw;
+  font-weight: bold;
+  font-family: "Nanum Gothic", serif;
+}
 body .container .thirdSection .c .c2-1 .circleBox {
   width: 100%;
   position: relative;
+  margin-top: -2vw;
 }
 body .container .thirdSection .c .c2-1 .circleBox .circle {
   display: block;
   width: 12vw;
   height: 12vw;
   margin: auto;
-}
-body .container .thirdSection .c .c2-1 .circleBox .circleperTitle {
-  position: absolute;
-  top: 1vw;
-  left: 4vw;
-  font-size: 1vw;
-  font-weight: bold;
-  font-family: "Nanum Gothic", serif;
 }
 body .container .thirdSection .c .c2-1 .circleBox .circleper {
   position: absolute;
@@ -403,8 +427,10 @@ body .container .thirdSection .c2 .table .tableMain .customtbody .customtr .cust
 }
 
 @media (max-width: 520px) {
-  body .container {
-    height: 100%;
+  body {
+    height: -moz-fit-content;
+    height: fit-content;
+    padding-bottom: 5vw;
   }
   body .container .header p {
     font-size: 4vw;
@@ -628,25 +654,48 @@ body .container .thirdSection .c2 .table .tableMain .customtbody .customtr .cust
     border-radius: 20px;
     height: 30%;
   }
+  body .container .main .secondSection .b2 .chartInfo {
+    width: 100%;
+    max-width: 28vw;
+    justify-content: space-between;
+    margin-left: 0.5vw;
+  }
+  body .container .main .secondSection .b2 .chartInfo .text-center {
+    margin-top: -0.6vw;
+    width: 20vw;
+    height: 20vw;
+  }
+  body .container .main .secondSection .b2 .chartInfo .text-center .text-sm {
+    font-size: 3vw;
+    text-align: center;
+  }
   body .container .main .thirdSection {
     margin-top: 120px;
     width: 100%;
-    height: 44vw;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
   }
   body .container .main .thirdSection .c {
     width: 100%;
-    height: 13vw;
+    height: 100%;
     display: flex;
     justify-content: space-between;
   }
   body .container .main .thirdSection .c .c2-1 {
     width: 32%;
+    height: 170px;
+    box-sizing: border-box;
     background-color: black;
     background-color: #303136;
     border-radius: 20px;
+  }
+  body .container .main .thirdSection .c .c2-1 .circleperTitle {
+    text-align: center;
+    line-height: 50px;
+    font-size: 10px;
+    font-weight: bold;
+    font-family: "Nanum Gothic", serif;
   }
   body .container .main .thirdSection .c .c2-1 .circleBox {
     width: 100%;
@@ -654,30 +703,23 @@ body .container .thirdSection .c2 .table .tableMain .customtbody .customtr .cust
   }
   body .container .main .thirdSection .c .c2-1 .circleBox .circle {
     display: block;
-    width: 12vw;
-    height: 12vw;
+    width: 28vw;
+    height: 28vw;
     margin: auto;
-  }
-  body .container .main .thirdSection .c .c2-1 .circleBox .circleperTitle {
-    position: absolute;
-    top: 1vw;
-    left: 4vw;
-    font-size: 1vw;
-    font-weight: bold;
-    font-family: "Nanum Gothic", serif;
+    margin-top: -6vw;
   }
   body .container .main .thirdSection .c .c2-1 .circleBox .circleper {
     position: absolute;
-    top: 6vw;
-    left: 4.3vw;
-    font-size: 2vw;
+    top: 12.5vw;
+    left: 7.4vw;
+    font-size: 7vw;
     font-weight: bold;
     text-shadow: 10px 10px 10px #1C1B20;
     font-family: "Nanum Gothic", serif;
   }
   body .container .main .thirdSection .c1 {
     width: 100%;
-    height: 30%;
+    height: 150px;
     background-color: #303136;
     border-radius: 20px;
     padding: 30px;
@@ -685,25 +727,26 @@ body .container .thirdSection .c2 .table .tableMain .customtbody .customtr .cust
     position: relative;
   }
   body .container .main .thirdSection .c1 .tgtitle {
-    font-size: 1vw;
-    position: absolute;
-    top: 0.9vw;
-    left: 17.3vw;
+    width: 65%;
+    line-height: 10vw;
+    font-size: 4vw;
+    text-align: center;
     font-weight: bold;
   }
   body .container .main .thirdSection .c1 .temperatureGraph {
     position: absolute;
-    top: 2.5vw;
+    top: 10vw;
     left: 0;
     border-radius: 20px;
     margin: auto;
     display: block;
     width: 90%;
-    height: 12vw;
+    height: 120px;
   }
   body .container .main .thirdSection .c2 {
+    margin-top: 4vw;
     width: 100%;
-    height: 30%;
+    height: 16vh;
     background-color: #303136;
     border-radius: 20px;
   }
